--- a/.gitignore
+++ b/.gitignore
@@ -7,13 +7,13 @@ Data/bin/
 Data/obj/
 Entity/bin/
 Entity/obj/
-OAWeb/bin/
-OAWeb/obj/
+Web/bin/
+Web/obj/
 Model/bin/
 Model/obj/
 packages/
 *.user
 *.pubxml
-OAWeb/OAWeb.csproj.user
-OAWeb/Upload/
-OAWeb/Preview/
+Web/OAWeb.csproj.user
+Web/Upload/
+Web/Preview/
