--- a/Web/WebSite.csproj
+++ b/Web/WebSite.csproj
@@ -204,6 +204,26 @@
     <Content Include="Content\Images\login-img.png" />
     <Content Include="Content\Images\login_logo.png" />
     <Content Include="Content\Images\logo.png" />
+    <Content Include="Content\pcimage\1.jpg" />
+    <Content Include="Content\pcimage\10.jpg" />
+    <Content Include="Content\pcimage\11.jpg" />
+    <Content Include="Content\pcimage\13.jpg" />
+    <Content Include="Content\pcimage\14.jpg" />
+    <Content Include="Content\pcimage\15.jpg" />
+    <Content Include="Content\pcimage\16.jpg" />
+    <Content Include="Content\pcimage\17.jpg" />
+    <Content Include="Content\pcimage\18.jpg" />
+    <Content Include="Content\pcimage\19.jpg" />
+    <Content Include="Content\pcimage\2.jpg" />
+    <Content Include="Content\pcimage\20.jpg" />
+    <Content Include="Content\pcimage\21.jpg" />
+    <Content Include="Content\pcimage\3.jpg" />
+    <Content Include="Content\pcimage\4.jpg" />
+    <Content Include="Content\pcimage\5.jpg" />
+    <Content Include="Content\pcimage\6.jpg" />
+    <Content Include="Content\pcimage\7.jpg" />
+    <Content Include="Content\pcimage\8.jpg" />
+    <Content Include="Content\pcimage\9.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="ApplicationInsights.config">
