--- a/Web/WebSite.csproj
+++ b/Web/WebSite.csproj
@@ -200,6 +200,7 @@
     <Content Include="Content\iconfont\iconfont.css" />
     <Content Include="Content\iconfont\iconfont.js" />
     <Content Include="Content\iconfont\iconfont.svg" />
+    <Content Include="Content\Images\arrow-right-gray.png" />
     <Content Include="Content\Images\arrow-right-white.png" />
     <Content Include="Content\Images\arrow-up-white.png" />
     <Content Include="Content\Images\login-img.png" />
@@ -691,6 +692,7 @@
     <Content Include="Views\FontPage\Index.cshtml" />
     <Content Include="Scripts\Swiper-4.5.0\js\swiper.min.js.map" />
     <Content Include="Views\FontPage\EnterPriseIntroduction.cshtml" />
+    <Content Include="Views\FontPage\NewsCenter.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Business\Business.csproj">
