--- a/Web/WebSite.csproj
+++ b/Web/WebSite.csproj
@@ -206,6 +206,8 @@
     <Content Include="Content\Images\login-img.png" />
     <Content Include="Content\Images\login_logo.png" />
     <Content Include="Content\Images\logo.png" />
+    <Content Include="Content\Images\star_CFCFCF.png" />
+    <Content Include="Content\Images\star_E1C69C.png" />
     <Content Include="Content\pcimage\1.jpg" />
     <Content Include="Content\pcimage\10.jpg" />
     <Content Include="Content\pcimage\11.jpg" />
@@ -693,6 +695,9 @@
     <Content Include="Scripts\Swiper-4.5.0\js\swiper.min.js.map" />
     <Content Include="Views\FontPage\EnterPriseIntroduction.cshtml" />
     <Content Include="Views\FontPage\NewsCenter.cshtml" />
+    <Content Include="Views\FontPage\BuildingStyle.cshtml" />
+    <Content Include="Views\FontPage\BusinessChannel.cshtml" />
+    <Content Include="Views\FontPage\RecruitmentTalents.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Business\Business.csproj">
