--- a/Web/Web.config
+++ b/Web/Web.config
@@ -66,6 +66,13 @@
       </authorization>
     </system.web>
   </location>
+  <location path="MobilePage">
+    <system.web>
+      <authorization>
+        <allow users="*" />
+      </authorization>
+    </system.web>
+  </location>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
