--- a/Business/Business.csproj
+++ b/Business/Business.csproj
@@ -77,6 +77,7 @@
     <Compile Include="SystemBusiness\RoleBusiness.cs" />
     <Compile Include="SystemBusiness\SysMessageBusiness.cs" />
     <Compile Include="SystemBusiness\UserBusiness.cs" />
+    <Compile Include="WebsiteManage.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
