--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -63,6 +63,7 @@
     <Compile Include="SystemModel\SysMessageModel.cs" />
     <Compile Include="SystemModel\TableDataModel.cs" />
     <Compile Include="SystemModel\UserModel.cs" />
+    <Compile Include="WJ_BuildingModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Entity\Entity.csproj">
