--- a/Entity/App.config
+++ b/Entity/App.config
@@ -14,5 +14,5 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings><add name="DataProvider" connectionString="metadata=res://*/DataEntity.csdl|res://*/DataEntity.ssdl|res://*/DataEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=121.40.182.24;initial catalog=sd_testdata;user id=sa;password=rdinfo.2018;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <connectionStrings><add name="DataProvider" connectionString="metadata=res://*/DataEntity.csdl|res://*/DataEntity.ssdl|res://*/DataEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=39.100.233.108;initial catalog=Wanjia;user id=sa;password=wanjia@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
