--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -64,8 +64,11 @@
     <Compile Include="SystemModel\TableDataModel.cs" />
     <Compile Include="SystemModel\UserModel.cs" />
     <Compile Include="WJ_BuildingModel.cs" />
+    <Compile Include="WJ_CustomerModel.cs" />
     <Compile Include="WJ_InvestmentModel.cs" />
+    <Compile Include="WJ_JobModel.cs" />
     <Compile Include="WJ_NewsModel.cs" />
+    <Compile Include="WJ_TenderModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Entity\Entity.csproj">
