--- a/Web/Web.config
+++ b/Web/Web.config
@@ -26,7 +26,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="DataProvider" connectionString="metadata=res://*/DataEntity.csdl|res://*/DataEntity.ssdl|res://*/DataEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=121.40.182.24;initial catalog=sd_testdata;user id=sa;password=rdinfo.2018;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DataProvider" connectionString="metadata=res://*/DataEntity.csdl|res://*/DataEntity.ssdl|res://*/DataEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=39.100.233.108;initial catalog=Wanjia;user id=sa;password=wanjia@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
