--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -63,7 +63,9 @@
     <Compile Include="SystemModel\SysMessageModel.cs" />
     <Compile Include="SystemModel\TableDataModel.cs" />
     <Compile Include="SystemModel\UserModel.cs" />
+    <Compile Include="WJ_AppointmentModel.cs" />
     <Compile Include="WJ_BuildingModel.cs" />
+    <Compile Include="WJ_ColumeModel.cs" />
     <Compile Include="WJ_CustomerModel.cs" />
     <Compile Include="WJ_InvestmentModel.cs" />
     <Compile Include="WJ_JobModel.cs" />
