--- a/Entity/Entity.csproj
+++ b/Entity/Entity.csproj
@@ -114,6 +114,9 @@
     <Compile Include="WJ_Customer.cs">
       <DependentUpon>DataEntity.tt</DependentUpon>
     </Compile>
+    <Compile Include="WJ_EnterpriseInfo.cs">
+      <DependentUpon>DataEntity.tt</DependentUpon>
+    </Compile>
     <Compile Include="WJ_Investment.cs">
       <DependentUpon>DataEntity.tt</DependentUpon>
     </Compile>
